--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "leaflet-draw",
-  "version": "1.0.3",
+  "name": "leaflet-scribe",
+  "version": "1.0.0",
   "description": "Vector drawing plugin for Leaflet",
   "devDependencies": {
     "eslint": "^3.5.0 <3.6.0",
@@ -43,7 +43,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Leaflet/Leaflet.draw.git"
+    "url": "https://github.com/yusufarsln98/leaflet-scribe.git"
   },
   "keywords": [
     "maps",
@@ -55,11 +55,8 @@
   ],
   "contributors": [
     {
-      "name": "Jon West",
-      "email": "ddproxy@gmail.com"
-    },
-    {
-      "name": "Jacob Toye"
+      "name": "Yusuf Arslan",
+      "email": "yusufarsln98@outlook.com"
     }
   ],
   "license": "MIT",
