feat: add types

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
   },
   "files": [
     "dist/*",
-    "docs/*"
+    "docs/*",
+		"index.d.ts"
   ],
   "scripts": {
     "build": "jake build -f ./Jakefile.js",
